# unoagent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
scripts/: simulate_game.py
tests/: __init__.py  test_engine.py  test_history.py
unoagent/: __init__.py  cli.py
unoagent/agent/: __init__.py  protocol.py
unoagent/agents/: __init__.py  human_agent.py  llm_agent.py
unoagent/engine/: __init__.py  card.py  deck.py  game_state.py  rules.py
unoagent/orchestration/: __init__.py  game_runner.py  tournament.py
