[project]
name = "unoagent"
version = "0.1.0"
description = "UNO game platform where LLM agents and humans play against each other"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typing-extensions>=4.0",
    "openai>=1.0",
    "typer[all]>=0.9",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
unoagent = "unoagent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unoagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
